2013-06-24  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* new-features.sgml (ov-new1.7.21): New section. Document rawmemchr.

2013-06-19  Corinna Vinschen  <corinna@vinschen.de>

	* faq-using.xml (faq.using.private-cygwin): Drop.

2013-06-19  Corinna Vinschen  <corinna@vinschen.de>

	* faq-using.xml (faq.using.multiple-copies): Modernize to reflect
	installation separation since Cygwin 1.7.
	(faq.using.third-party.multiple-copies): Ditto.

2013-06-17  Corinna Vinschen  <corinna@vinschen.de>

	* cygwinenv.xml: Fix link to FAQ.

2013-06-05  Corinna Vinschen  <corinna@vinschen.de>

	* faq-copyright.xml: Fix link to license.
	* faq-using.xml: Ditto.
	* faq-what.xml: Ditto.

2013-06-05  Corinna Vinschen  <corinna@vinschen.de>

	* faq-programming.xml: Convert url to refer to new flat faq.html file.
	* faq-setup.xml: Ditto.
	* faq-using.xml: Ditto.
	* highlights.xml: Ditto.

2013-06-05  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.19): Revert mandatory locking support to
	"preliminary".

2013-06-04  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in: Add rule to rebuild Makefile if Makefile.in changes.
	Include Makefile.dep last.
	(Makefile.dep): Run xidepend within source dir.  Temporarily drop
	faq.xml from dependencies.
	* xidepend: Fix creating base filename to accommodate VPATH.

2013-06-04  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.19): Align mandatory locking text to
	today's changes.

2013-06-03  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.19): Add mandatory locking.

2013-05-23  Warren Young  <warren@etr-usa.com>

	* xidepend: New script, generates Makefile.dep from top-level XML
	* .cvsignore: Ignoring Makefile.dep output
	* Makefile: Creating Makefile.dep if it doesn't exist, including it
	if it does, and removing it on 'make clean'
	* Wishlist: Knocked autodependency generation off the list

2013-05-23  Corinna Vinschen  <corinna@vinschen.de>
