@@ -1,3 +1,10 @@
+2013-07-15  Corinna Vinschen  <corinna@vinschen.de>
+
+	* new-features.sgml (ov-new1.7.22): New section.  Document dropped
+	support for /dev/mem, /dev/kmem, /dev/port.
+	* specialnames.xml (pathnames-posixdevices): Drop description of
+	/dev/mem, /dev/kmem, /dev/port.
+
 2013-06-24  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
 
 	* new-features.sgml (ov-new1.7.21): New section. Document rawmemchr.
